--- a/views/create.ejs
+++ b/views/create.ejs
@@ -20,8 +20,6 @@
 
 </head>
 <body>
-  <% include /partials/header %>
-
   <div id="container">
     <div class="wrapper">
       <canvas id="myCanvas" width="1000" height="310" keepalive="true"></canvas>
@@ -125,8 +123,8 @@
           <select id="bg3">
           </select>
         </div>
-        <button class="block" id="randombg">randomize each background</button>
-        <button class="block" id="onerandombg">matching random background</button>
+        <button class="background-button" id="randombg">randomize each background</button>
+        <button class="background-button" id="onerandombg">matching random background</button>
 
       </div>
 
