--- a/public/css/main.css
+++ b/public/css/main.css
@@ -39,6 +39,7 @@ label {
 
 .labelrow {
   height: 45px;
+  overflow: hidden;
   margin-left: 12px; }
 
 input[type=radio] {
@@ -68,8 +69,10 @@ button {
     background-position: 4px 7px;
     background-size: 20px 20px;
     background-repeat: no-repeat; }
-  button .downloadbutton {
-    width: 90%; }
+
+.downloadbutton {
+  width: 90%;
+  margin-left: 5%; }
 
 .background-button {
   display: block;
@@ -182,7 +185,7 @@ button:active {
   line-height: auto;
   padding: 0px 10px;
   background-color: white;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
   line-height: 50px; }
 
 #controls {
