--- a/sass/buttons.scss
+++ b/sass/buttons.scss
@@ -71,6 +71,15 @@ button {
 
 
 
+
+
+}
+
+#numberLoaded {
+  margin-right: 10px;
+}
+
+
 .flipbutton {
   background-image: url('/emojis/rightarrow.png');
     background-position: 4px 7px;
@@ -78,9 +87,6 @@ button {
     background-repeat: no-repeat;
 }
 
-
-
-}
 
 .downloadbutton {
   width: 90%;
