--- a/views/comicshow.ejs
+++ b/views/comicshow.ejs
@@ -42,6 +42,6 @@
 <body>
   <% include /partials/header %>
   <% include /partials/comicdisplay %>
-
+  <a href="/comics/create"><button id="createComic">make a comic</button></a>
 </body>
 </html>
