--- a/public/css/main.css
+++ b/public/css/main.css
@@ -25,22 +25,23 @@ label {
   vertical-align: middle; }
   label img {
     width: 30%;
-    margin: 0px 35%; }
+    margin: 0px 35%;
+    margin-top: 2px; }
 
 .label-3rd {
-  width: 121px;
-  margin-right: 21px;
+  width: 100px;
+  margin-right: 15px;
   text-align: center;
   line-height: 32px; }
 
 .label-4th {
-  width: 91px;
-  margin-right: 12px; }
+  width: 75px;
+  margin-right: 20px; }
 
 .labelrow {
   height: 45px;
   overflow: hidden;
-  margin-left: 12px; }
+  margin-left: 20px; }
 
 input[type=radio] {
   display: none; }
@@ -398,6 +399,18 @@ input[type="radio"]:checked + label {
   margin-right: 30px;
   text-transform: none;
   float: right; }
+
+  .viewlink {
+    text-align: center;
+    font-size: 2em;
+
+  }
+
+  .viewtextbox {
+  display: block;
+  font-size: 1em;
+  width: 75%;
+  margin: 20px auto; }
 
 .randomdeliverylink a {
   text-decoration: underline;
