now shows date when updating random comic

--- a/views/partials/comicdisplay.ejs
+++ b/views/partials/comicdisplay.ejs
@@ -4,8 +4,7 @@
   <div id="comic">
 <img src="<%= img %>"/>
   </div>
-  <div id="comicauthor"><img src='/emojis/tm.png'> <img src='/emojis/copyright.png'> <span id='author'><%= author %>, <%= date %></span>
-  <span class="randomdeliverylink"><a class='deliverylink' href="https://emojicomic.herokuapp.com/comics/<%= shortid %>">permalink</a></span>
+  <div id="comicauthor"><img src='/emojis/tm.png'> <img src='/emojis/copyright.png'> <span id='author'><%= author %></span>, <span id='date'><%= date %></span> <span class="randomdeliverylink"><a class='deliverylink' href="https://emojicomic.herokuapp.com/comics/<%= shortid %>">permalink</a></span>
   <br>Redistribution Hella Encouraged
   </div>
   </div>
