adding title to create page

--- a/views/create.ejs
+++ b/views/create.ejs
@@ -5,6 +5,7 @@
   <script type="text/javascript" src="/js/vendor.js"></script>
   <script type="text/paperscript" canvas="myCanvas" src="/js/scripts.js"></script>
   <script type="text/javascript" src="/js/slick.js"></script>
+  <title>Create A Comic | Emoji Comics</title>
 
 
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
