--- a/views/create.ejs
+++ b/views/create.ejs
@@ -76,19 +76,19 @@
         </div>
         <div class="labelrow">
           <input type="radio" id="radioSpeechL" name="speechtype" checked="checked" value="speechleft">
-          <label class="label-4th" for="radioSpeechL">
+          <label class="lighter-label label-4th" for="radioSpeechL">
             <img class="speechselect" src='/emojis/speechleft.png'>
           </label>
           <input type="radio" id="radioSpeechR" name="speechtype" value="speechright">
-          <label class="label-4th" for="radioSpeechR">
+          <label class="lighter-label label-4th" for="radioSpeechR">
             <img class="speechselect" src='/emojis/speechright.png'>
           </label>
           <input type="radio" id="radioThoughtL" name="speechtype" value="thoughtleft">
-          <label class="label-4th" for="radioThoughtL">
+          <label class="lighter-label label-4th" for="radioThoughtL">
             <img class="speechselect" src='/emojis/thoughtleft.png'>
           </label>
           <input type="radio" id="radioThoughtR" name="speechtype" value="thoughtright">
-          <label class="label-4th" for="radioThoughtR">
+          <label class="lighter-label label-4th" for="radioThoughtR">
             <img class="speechselect" src='/emojis/thoughtright.png'>
           </label>
         </div>
@@ -96,19 +96,19 @@
 
           <input type="radio" id="radioFontS" name="fontsize" value="10">
           <label class="fontsmall label-3rd" for="radioFontS">small</label>
-          <input type="radio" id="radioFontM" name="fontsize" checked="checked" value="20">
+          <input type="radio" id="radioFontM" name="fontsize" checked="checked" value="17">
           <label class="fontmed label-3rd" for="radioFontM">medium</label>
-          <input type="radio" id="radioFontL" name="fontsize" value="30">
+          <input type="radio" id="radioFontL" name="fontsize" value="25">
           <label class="fontbig label-3rd" for="radioFontL">big</label>
           </div>
         <div class="labelrow">
 
           <input type="radio" id="radioFontRobot" name="fontface" value="Inconsolata">
-          <label class="label-3rd robotfont" for="radioFontRobot">ROBOT</label>
+          <label class="darker-label label-3rd robotfont" for="radioFontRobot">ROBOT</label>
           <input type="radio" id="radioFontNormal" name="fontface" checked="checked" value="Lato">
-          <label class="label-3rd normalfont" for="radioFontNormal">Normal.</label>
+          <label class="darker-label label-3rd normalfont" for="radioFontNormal">Normal.</label>
           <input type="radio" id="radioFontCursive" name="fontface" value="Pacifico">
-          <label class="label-3rd cursivefont" for="radioFontCursive">Cursive!</label>
+          <label class="darker-label label-3rd cursivefont" for="radioFontCursive">Cursive!</label>
         </div>
       </div>
 
