--- a/views/index.ejs
+++ b/views/index.ejs
@@ -42,7 +42,11 @@
 </head>
 <body>
     <div class="wrapper">
-      <div id="maintitle">Emoji Comics</div>
+      <div id="titlewrap">
+      <div id="maintitle">EMOJI VISION</div>
+      <div id="submaintitle">to err is human; to emoji, divine</div>
+      </div>
+      </div>
       <div class="carousel-container">
       <div class="carousel">
         <div><img src="img/example1.png"></div>
