--- a/views/comicshow.ejs
+++ b/views/comicshow.ejs
@@ -36,7 +36,7 @@
   <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 
   <link rel="stylesheet" type="text/css" href="/css/main.css">
-  <title>View A Comic | Emoji Comics</title>
+  <title>View A Comic | Emoji Vision</title>
 
 </head>
 <body>
