--- a/views/index.ejs
+++ b/views/index.ejs
@@ -44,7 +44,7 @@
     <div class="wrapper">
       <div id="titlewrap">
       <div id="maintitle">EMOJI VISION</div>
-      <div id="submaintitle">to err is human; to emoji, divine</div>
+      <div id="submaintitle"><span class="mainquote">to err is human; to emoji, divine</span></div>
       </div>
       </div>
       <div class="carousel-container">
