--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,21 +11,9 @@
      \ \_______\ \__\    \ \__\ \_______\ \________\ \__\
       \|_______|\|__|     \|__|\|_______|\|________|\|__|
 
-
-
-   ________  ________  _____ ______   ___  ________  ________
-  |\   ____\|\   __  \|\   _ \  _   \|\  \|\   ____\|\   ____\
-  \ \  \___|\ \  \|\  \ \  \\\__\ \  \ \  \ \  \___|\ \  \___|_
-   \ \  \    \ \  \\\  \ \  \\|__| \  \ \  \ \  \    \ \_____  \
-    \ \  \____\ \  \\\  \ \  \    \ \  \ \  \ \  \____\|____|\  \
-     \ \_______\ \_______\ \__\    \ \__\ \__\ \_______\____\_\  \
-      \|_______|\|_______|\|__|     \|__|\|__|\|_______|\_________\
-                                                       \|_________|
+vision lol
 
    -->
-  <script type="text/javascript" src="/js/vendor.js"></script>
-  <script type="text/javascript" src="/js/slick.js"></script>
-  <script type="text/javascript" src="/js/scripts/slickuser.js"></script>
 
 
   <meta name="description" content="Make comic strips with emojis. Extremely fun and excellent.">
@@ -36,30 +24,32 @@
   <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 
   <link rel="stylesheet" type="text/css" href="/css/main.css">
-  <link rel="stylesheet" type="text/css" href="/css/slick.css">
 
-  <title>Emoji Comics</title>
+  <title>EMOJI VISION</title>
 </head>
 <body>
-    <div class="wrapper">
+    <div id="landing">
       <div id="titlewrap">
-      <div id="maintitle">EMOJI VISION</div>
+      <div id="maintitle">EMOJIVISION LTD.</div>
       <div id="submaintitle"><span class="mainquote">to err is human; to emoji, divine</span></div>
       </div>
+      <div id="wrapper">
+      <div class="col1">
+        <a href="/code">
+        <div class="title">EMOJICODE</div>
+        <div class="subtitle">communicate entirely with emojis</div>
+        <img src="img/sampleconvo.png">
+        </a>
       </div>
-      <div class="carousel-container">
-      <div class="carousel">
-        <div><img src="img/example1.png"></div>
-        <div><img src="img/example2.png"></div>
-        <div><img src="img/example3.png"></div>
-        <div><img src="img/example4.png"></div>
-        <div><img src="img/example5.png"></div>
+      <div class="col2">
+        <a href="/comics">
+        <div class="title">EMOJICOMICS</div>
+        <div class="subtitle">build your own emoji comic strips</div>
+        <img src="img/welcome.png">
+      </a>
       </div>
       </div>
-      <div class="mainlinks">
-  <a class="mainpagelink" href="/comics/create">MAKE A COMIC</a> <a class="mainpagelink" href="/comics/random">VIEW COMICS</a>
-</div>
-  </div>
-  <div class="creatorname">by <a href="http://lucasquinn.com" target="_blank">lukey q</a> 2014</div>
+    </div>
+
 </body>
 </html>
