--- a/public/css/main.css
+++ b/public/css/main.css
@@ -131,6 +131,35 @@ button:active {
 #header a:hover {
   color: white; }
 
+#landing #wrapper {
+  width: 1000px;
+  padding: 10px 0px;
+  margin: 30px auto; }
+  #landing #wrapper .col1 {
+    width: 45%;
+    height: 400px;
+    display: inline-block;
+    float: left; }
+  #landing #wrapper .col2 {
+    float: right;
+    width: 45%;
+    height: 400px;
+    display: inline-block; }
+  #landing #wrapper .title {
+    text-align: center;
+    width: 70%;
+    font-size: 2.5em;
+    font-weight: bold;
+    margin: 2px 15%; }
+  #landing #wrapper img {
+    margin-top: 20px;
+    width: 60%;
+    margin: 0 20%; }
+  #landing #wrapper .subtitle {
+    font-style: italic;
+    text-align: center;
+    margin-bottom: 10px; }
+
 #moonspin {
   margin: 0 auto;
   display: inline-block; }
