--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,6 +10,7 @@ body, html {
 
 @import 'buttons';
 @import 'header';
+@import 'landing';
 @import 'creator';
 @import 'comicdisplay';
 @import 'indexpage';
