moving emojicode into this base

--- a/views/comicindex.ejs
+++ b/views/comicindex.ejs
@@ -43,8 +43,7 @@
 <body>
     <div class="wrapper">
       <div id="titlewrap">
-      <div id="maintitle">EMOJI VISION</div>
-      <div id="submaintitle"><span class="mainquote">to err is human; to emoji, divine</span></div>
+      <div id="maintitle">EMOJI COMICS</div>
       </div>
       </div>
       <div class="carousel-container">
