--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,7 +22,8 @@ vision lol
   <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Inconsolata:400,700' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
-
+  <script src="js/vendor.js" type="text/javascript"></script>
+  <script src="js/scripts/indexpage.js" type="text/javascript"></script>
   <link rel="stylesheet" type="text/css" href="/css/main.css">
 
   <title>EMOJI VISION</title>
@@ -30,7 +31,7 @@ vision lol
 <body>
     <div id="landing">
       <div id="titlewrap">
-      <div id="maintitle">EMOJIVISION LTD.</div>
+      <div id="maintitle">EMOJI.VISION</div>
       <div id="submaintitle"><span class="mainquote">to err is human; to emoji, divine</span></div>
       </div>
       <div id="wrapper">
