--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,7 +24,7 @@ vision lol
   <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
   <script src="js/vendor.js" type="text/javascript"></script>
   <script src="js/scripts/indexpage.js" type="text/javascript"></script>
-  <link rel="stylesheet" type="text/css" href="/css/main.css">
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 
   <title>EMOJI VISION</title>
 </head>
