--- a/views/comicshow.ejs
+++ b/views/comicshow.ejs
@@ -37,7 +37,10 @@
 
   <link rel="stylesheet" type="text/css" href="/css/main.css">
   <title>View A Comic | Emoji Vision</title>
-
+<script>
+var pageTitle = "Create A Comic"
+var pageParent = "Emoji Comics"
+</script>
 </head>
 <body>
   <% include /partials/header %>
