--- a/public/css/main.css
+++ b/public/css/main.css
@@ -115,18 +115,27 @@ button:active {
   font-size: 1.4em; }
 
 #header {
-  color: black;
-  font-size: 3em;
+  background-color: black;
+  border-bottom: 2px solid white;
+  color: #36D7B7;
+  font-family: 'Lato';
   height: 20px;
-  line-height: 20px;
-  margin: 20px 0;
+  line-height: 25px;
+  margin-bottom: 5px;
+  padding: 10px;
   text-align: center;
-  width: 100%;
-  text-transform: uppercase; }
+  width: 100%; }
+  #header .title {
+    font-size: 1.5em;
+    font-family: 'Pacifico'; }
+
+.subtitle {
+  padding-left: 20px; }
 
 #header a {
+  text-decoration: none;
   display: inline-block;
-  color: black; }
+  color: #36D7B7; }
 
 #header a:hover {
   color: white; }
@@ -479,8 +488,7 @@ input[type="radio"]:checked + label {
 
 #maintitle {
   text-shadow: 4px 4px 1px white;
-  font-size: 5em;
-  text-transform: uppercase; }
+  font-size: 5em; }
 
 #submaintitle {
   font-size: 1.5em;
