--- a/views/codeindex.ejs
+++ b/views/codeindex.ejs
@@ -85,6 +85,7 @@
         fjs.parentNode.insertBefore(js, fjs);
     }(document, 'script', 'facebook-jssdk'));
     </script>
+
     <script src="emojicode/js/jquery.js" type="text/javascript"></script>
     <script src="emojicode/js/jquery-ui.js" type="text/javascript"></script>
     <script src="emojicode/js/intro.js" type="text/javascript"></script>
@@ -96,7 +97,7 @@
     <script src="emojicode/js/swfobject.js" type="text/javascript"></script>
     <script src="emojicode/js/dictionaries.js" type="text/javascript"></script>
 
-    <div class="mobile-menu">EmojiCode</a></div>
+    <div class="mobile-menu"><a href="/">Emojivision Industries</a> - EmojiCode</div>
     <div class="pure-menu pure-menu-open pure-menu-horizontal">
         <ul>
             <li>
