--- a/views/create.ejs
+++ b/views/create.ejs
@@ -17,10 +17,10 @@
 
   <link rel="stylesheet" type="text/css" href="/css/main.css">
   <link rel="stylesheet" type="text/css" href="/css/slick.css">
-
-
 </head>
 <body>
+  <% include /partials/header %>
+
   <div id="container">
     <div class="wrapper">
       <canvas id="myCanvas" width="1000" height="310" keepalive="true"></canvas>
