--- a/views/index.ejs
+++ b/views/index.ejs
@@ -26,12 +26,13 @@ vision lol
   <script src="js/scripts/indexpage.js" type="text/javascript"></script>
   <link rel="stylesheet" type="text/css" href="css/main.css">
 
-  <title>EMOJI VISION</title>
+  <title>EmojiVision</title>
 </head>
 <body>
+
     <div id="landing">
       <div id="titlewrap">
-      <div id="maintitle">EMOJI.VISION</div>
+      <div id="maintitle">EmojiVision Industries</div>
       <div id="submaintitle"><span class="mainquote">to err is human; to emoji, divine</span></div>
       </div>
       <div id="wrapper">
@@ -50,6 +51,8 @@ vision lol
       </a>
       </div>
       </div>
+  <div class="creatorname">by <a href="http://lucasquinn.com" target="_blank">lukey q</a> 2014</div>
+
     </div>
 
 </body>
