--- a/views/create.ejs
+++ b/views/create.ejs
@@ -114,9 +114,9 @@
 
       <div id="backgroundsoption">
         <div class="options-container">
-          <div class="subtitle">Panel 1</div>
-          <div class="subtitle">Panel 2</div>
-          <div class="subtitle">Panel 3</div>
+          <div class="panel-number">Panel 1</div>
+          <div class="panel-number">Panel 2</div>
+          <div class="panel-number">Panel 3</div>
           <select id="bg1">
           </select>
           <select id="bg2">
