--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,58 +2,272 @@
 <html>
 <head>
 
-  <!--
-   _______   _____ ______   ________        ___  ___
-  |\  ___ \ |\   _ \  _   \|\   __  \      |\  \|\  \
-  \ \   __/|\ \  \\\__\ \  \ \  \|\  \     \ \  \ \  \
-   \ \  \_|/_\ \  \\|__| \  \ \  \\\  \  __ \ \  \ \  \
-    \ \  \_|\ \ \  \    \ \  \ \  \\\  \|\  \\_\  \ \  \
-     \ \_______\ \__\    \ \__\ \_______\ \________\ \__\
-      \|_______|\|__|     \|__|\|_______|\|________|\|__|
+<!--
+ _______   _____ ______   ________        ___  ___
+|\  ___ \ |\   _ \  _   \|\   __  \      |\  \|\  \
+\ \   __/|\ \  \\\__\ \  \ \  \|\  \     \ \  \ \  \
+ \ \  \_|/_\ \  \\|__| \  \ \  \\\  \  __ \ \  \ \  \
+  \ \  \_|\ \ \  \    \ \  \ \  \\\  \|\  \\_\  \ \  \
+   \ \_______\ \__\    \ \__\ \_______\ \________\ \__\
+    \|_______|\|__|     \|__|\|_______|\|________|\|__|
 
 vision lol
 
-   -->
+-->
 
 
-  <meta name="description" content="Make comic strips with emojis. Extremely fun and excellent.">
+<meta name="description" content="Make comic strips with emojis. Extremely fun and excellent.">
 
-  <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
-  <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
-  <link href='https://fonts.googleapis.com/css?family=Inconsolata:400,700' rel='stylesheet' type='text/css'>
-  <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
-  <script src="js/vendor.js" type="text/javascript"></script>
-  <script src="js/scripts/indexpage.js" type="text/javascript"></script>
-  <link rel="stylesheet" type="text/css" href="css/main.css">
+<link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=Inconsolata:400,700' rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
+<script type="text/javascript" src="/js/vendor.js"></script>
+<script type="text/javascript" src="/js/slick.js"></script>
+<script type="text/javascript" src="/js/scripts/slickuser2.js"></script>
+<link rel="stylesheet" type="text/css" href="css/main.css">
+<link rel="stylesheet" type="text/css" href="css/normalize.css">
+<link rel="stylesheet" type="text/css" href="css/skeleton.css">
 
-  <title>EmojiVision</title>
+
+
+<title>EmojiVision</title>
 </head>
 <body>
+  <div id="mainpage">
 
-    <div id="landing">
-      <div id="titlewrap">
-      <div id="maintitle">EmojiVision Industries</div>
-      <div id="submaintitle"><span class="mainquote">to err is human; to emoji, divine</span></div>
-      </div>
-      <div id="wrapper">
-      <div class="col1">
-        <a href="/code">
-        <div class="title">EMOJICODE</div>
-        <div class="subtitle">communicate entirely with emojis</div>
-        <img src="img/sampleconvo.png">
-        </a>
-      </div>
-      <div class="col2">
-        <a href="/comics">
-        <div class="title">EMOJICOMICS</div>
-        <div class="subtitle">build your own emoji comic strips</div>
-        <img src="img/welcome.png">
-      </a>
-      </div>
-      </div>
-  <div class="creatorname">by <a href="http://lucasquinn.com" target="_blank">lukey q</a> 2014</div>
-
+    <div class="container">
+      <div class="row">
+        <div class="offset-by-three six columns">
+          <img id="logo" class="u-max-full-width" src="img/visionlogo.png">
+        </div>
     </div>
 
+      <div class="row">
+        <div class="offset-by-one ten columns divider"></div>
+      </div>
+      <div class="row">
+        <div class="choice offset-by-two two columns">
+          PRODUCTS
+        </div>
+        <div class="choice two columns">
+          OUR VISION
+        </div>
+        <div class="choice two columns">
+          OUR TEAM
+        </div>
+        <div class="choice two columns">
+          CONTACT
+        </div>
+      </div>
+       <div class="row">
+        <div class="offset-by-one ten columns divider"></div>
+      </div>
+
+      <div class="row">
+        <!-- <div class="f columns offset-by-one"> -->
+          <!-- <img class="u-max-full-width" src="img/frontsign.jpg"> -->
+        <!-- </div> -->
+        <div class="ten front columns offset-by-one">
+          <div class="catchphrase">
+          Dedicated To The Advancement Of Emoji Research Worldwide
+        </div>
+        </div>
+        <div class="one column"></div>
+
+      </div>
+
+     <div class="row">
+        <div class="offset-by-one ten columns">
+        <div class="headline">
+          <img src='emojis/475.png'>
+          <span>Our Vision</span>
+          <img class='flipped' src='emojis/475.png'>
+        </div>
+
+        </div>
+      </div>
+
+      <div class="row">
+          <div class="five columns offset-by-one description">
+          <div class="subheader">
+            <img src="emojis/389.png">
+            Modern Language For A Modern World
+          </div>
+          <p>Many written languages have existed for more than 5,000 years. Would you ride in a 5,000-year-old airplane? Would you use a 100-year-old computer? At EmojiVision Industries, we don't think so either. </p>
+          <p>It's time for an upgrade.</p>
+        </div>
+        <div class="five columns description">
+          <div class="subheader">
+            <img src="emojis/440.png">
+            Tear Down The Language Wall</div>
+          <p>In this modern world of ours it's trivial for two people from anywhere on the globe to communicate. Unfortunately, they may not speak the same language. Emojis are the first language without borders.</p>
+        </div>
+      </div>
+
+
+       <div class="row">
+        <div class="offset-by-one ten columns">
+        <div class="headline">
+
+          <img src='emojis/475.png'>
+          <span>Products</span>
+          <img class='flipped' src='emojis/475.png'>
+</div>
+
+        </div>
+      </div>
+
+      <div class="row">
+          <div class="ten columns offset-by-one description">
+          <div class="subheader">
+          <a href="/comics">
+            <img src="emojis/538.png">
+            Emoji Comics</div>
+        </a>
+          <div class="img-box">
+
+          <img class="u-max-full-width imgcenter" src="img/examplecomic.png">
+          </div>
+          <p>Many written languages have existed for more than 5,000 years. Would you ride in a 5,000-year-old airplane? Would you use a 100-year-old computer? At EmojiVision Industries, we don't think so either.</p>
+          <p><em>Check out <a href="/comics">Emoji Comics</a></em></p>
+
+        </div>
+      </div>
+      <div class="row">
+          <div class="ten columns description offset-by-one">
+          <div class="subheader">
+          <a href="/code">
+            <img src="emojis/399.png">
+          EmojiCode</div>
+        </a>
+      </div>
+      <div class="row">
+          <div class="four columns description offset-by-four">
+          <img class="center-img" src="img/codeexample.png">
+        </div>
+      </div>
+      <div class="row">
+          <div class="ten columns description offset-by-one">
+
+          <p>Studies have shown that using Emojis in your day-to-day communication. </p>
+          <p><em>Check out <a href="/code">EmojiCode</a></em></p>
+        </div>
+        </div>
+      </div>
+      <div class="row">
+          <div class="ten columns offset-by-one description">
+          <div class="subheader">
+            <img src="emojis/474.png">
+            Labs</div>
+          <p>Aside from our polished products, EmojiVision has a very active research and development department. EmojiVision Labs is an experimental . </p>
+        </div>
+      </div>
+
+
+
+       <div class="row">
+        <div class="offset-by-one ten columns">
+        <div class="headline">
+
+          <img src='emojis/475.png'>
+                   <span>Our Team</span>
+                   <img class='flipped' src='emojis/475.png'>
+        </div>
+      </div>
+
+      <div class="row">
+           <div class="five columns offset-by-one description">
+          <div class="subheader">Professor Moon</div>
+          <img class="u-max-full-width" src="img/profmoon.jpg">
+          <div class="credentials">Founder And Managing Director</div>
+          <p>Professor Moon has been interested in the study of Emojis for more than five decades. As one of the world's leading Emoji scholars, he has worked tirelessly to elevate Emojis. He currently holds four Emoji-related patents and his Emoji-related papers have been cited countless times by the world's top Emoji scholars.</p>
+        </div>
+        <div class="five columns">
+            <div class="subheader">Dr. Jennifer iMessage</div>
+            <img class="u-max-full-width" src="img/jenny.jpg">
+            <div class="credentials">Director Of Research And Development</div>
+            <p>As the scientist at the forefront of the world's most advanced Emoji research programs, Dr. iMessage has been party to some of the most important discoveries. Thanks to her tireless efforts, our understanding of the art and science of Emojis has increased immeasurably. </p>
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+           <div class="five columns offset-by-one description">
+          <div class="subheader">Lukey Q. Pizzaface</div>
+          <img class="u-max-full-width" src="img/pizzaface.jpg">
+          <div class="credentials">Director Of Communication</div>
+          <p>After years in the fast-paced world of Investment Banking, Mr. Pizzaface brings his talents to EmojiVision. Best known for his book, "Emojis Only: Why You've Lost The Moment You Send A Full Word," Pizzaface is on the cutting edge of professional Emoji communication. </p>
+        </div>
+        <div class="five columns">
+            <div class="subheader">Princess Cupcake Fireworks</div>
+            <img class="u-max-full-width" src="img/princess.jpg">
+            <div class="credentials">Chief Royal Advisor</div>
+            <p>As our Royal Advisor, Princess Fireworks helps EmojiVision utilize the vast resources of the Emoji Crown. She's currently helping to finalize the plans to open EmojiVision's first satellite office in the Emoji Kingdom. </p>
+          </div>
+        </div>
+
+ <div class="row">
+        <div class="offset-by-one ten columns">
+        <div class="headline">
+
+          <img src='emojis/475.png'>
+          <span>Contact</span>
+          <img class='flipped' src='emojis/475.png'>
+        </div>
+
+        </div>
+      </div>
+      <!--
+          <div class="subheader">Swag me The Fuck Out</div>
+           <div>In this modern world of ours it's trivial for two people from anywhere on the globe to communicate. Unfortunately, they may not speak the same language. Emojis are the first language without borders.</div>
+        </div>
+      </div> -->
+
+     <!--  <div class="portfolio-container">
+        <div class="yolo primary-color-bg left"><h1>Welcome To EmojiVision Industries</h1>
+        </div>
+        <div class="swag right manyemojis"></div>
+
+        <div class="clearfix"></div>
+        <div class="headline"><span>Our Vision</span></div>
+        <div class="woop primary-color-bg">
+          <div class="subheader">A Modern Language For A Modern World</div>
+          <p>Many written languages have existed for more than 5,000 years. Would you ride in a 5,000-year-old airplane? Would you use a 100-year-old computer? At EmojiVision Industries, we don't think so either. </p>
+          <p>It's time for an upgrade.</p>
+          <div class="subheader">Tear Down The Language Wall</div>
+          <div>In this modern world of ours it's trivial for two people from anywhere on the globe to communicate. Unfortunately, they may not speak the same language. Emojis are the first language without borders.</div>
+          <div class="subheader">Swag me The Fuck Out</div>
+           <div>In this modern world of ours it's trivial for two people from anywhere on the globe to communicate. Unfortunately, they may not speak the same language. Emojis are the first language without borders.</div>
+        </div>
+        <div class="headline"><span>Products</span></div>
+        <div class="yolo left manyemojis"></div>
+        <div class="swag primary-color-bg right"><h1>EmojiComics</h1>Construct Your Own Emoji Reality</div>
+        <div class="clearfix"></div>
+
+        <div class="swag primary-color-bg left"><h1>EmojiCode</h1>Communicate Entirely In Emojis</div>
+        <div class="yolo right manyemojis"></div>
+        <div class="clearfix"></div>
+        <div class="headline"><span>Our Team</span></div>
+ -->
+      </div>
+
+    </div>
+  </div>
+</div>
+
+
+
+
+
+
+
+
+</div>
+
+</div>
+
+</div>
 </body>
 </html>
