--- a/public/css/main.css
+++ b/public/css/main.css
@@ -476,56 +476,186 @@ input[type="radio"]:checked + label {
   text-decoration: underline;
   color: black; }
 
-.carousel-container {
-  width: 910px;
-  height: 310px;
+#mainpage {
+  margin: 0 auto;
+  padding: 0;
+  font-family: 'Lato'; }
+  #mainpage .container {
+    background-color: white;
+    border: 2px solid black; }
+    @media (min-width: 400px) {
+      #mainpage .container {
+        width: 100%;
+        border: none; } }
+    @media (min-width: 750px) {
+      #mainpage .container {
+        width: 80%;
+        margin: 10px 10%; } }
+  #mainpage #mainheader {
+    width: 100%;
+    margin: 0 auto; }
+    #mainpage #mainheader img {
+      margin: 30px 25px; }
+  #mainpage #test {
+    width: 100%;
+    height: 200px; }
+  #mainpage #logo {
+    margin-top: 30px; }
+  #mainpage .headline {
+    font-family: 'Oswald';
+    height: 80px;
+    text-align: center;
+    line-height: 80px;
+    width: 100%;
+    margin: 10px auto;
+    color: black;
+    background-color: #A2DED0;
+    font-size: 2.5em; }
+    #mainpage .headline img {
+      height: auto;
+      vertical-align: middle;
+      margin: 0 10px;
+      display: inline-block; }
+      #mainpage .headline img .flipped {
+        -moz-transform: scaleX(-1);
+        -o-transform: scaleX(-1);
+        -webkit-transform: scaleX(-1);
+        transform: scaleX(-1);
+        filter: FlipH;
+        -ms-filter: "FlipH"; }
+    #mainpage .headline span {
+      margin-left: 20px; }
+  #mainpage .maintitle {
+    line-height: 120px; }
+  #mainpage .clearfix:after {
+    content: '';
+    clear: both;
+    display: table; }
+  #mainpage .bigbox {
+    width: 90%;
+    height: 300px;
+    background-color: pink; }
+  #mainpage .choice {
+    text-align: center;
+    line-height: 40px;
+    border-bottom: 4px solid white; }
+  #mainpage .portfolio-container {
+    width: 80%;
+    margin: 10px 10%; }
+  #mainpage .manyemojis {
+    background-image: url("../img/manyemojis.png"); }
+  #mainpage .swag {
+    color: white;
+    font-size: 16px;
+    display: block;
+    box-sizing: border-box;
+    width: 50%;
+    height: 300px;
+    padding: 20px;
+    margin: 0 0 10px 0%; }
+  #mainpage .woop {
+    color: black;
+    font-size: 16px;
+    display: block;
+    box-sizing: border-box;
+    width: 100%;
+    height: auto;
+    padding: 20px;
+    margin: 10px 0; }
+  #mainpage .left {
+    float: left; }
+  #mainpage .right {
+    float: right; }
+  #mainpage .primary-color-bg {
+    background: #A2DED0; }
+  #mainpage .button-color-bg {
+    background: #36D7B7; }
+  #mainpage .yolo {
+    color: black;
+    font-size: 1.5em;
+    padding: 20px; }
+  #mainpage .center-img {
+    max-width: 500px;
+    margin: 0 auto; }
+  #mainpage .credentials {
+    font-style: italic;
+    text-align: center;
+    font-size: .9em; }
+  #mainpage .containertainer {
+    width: 80%;
+    padding: 10%; }
+  #mainpage .front {
+    background-image: url("../img/fronter2.jpg");
+    background-position: center;
+    background-size: auto;
+    color: white;
+    height: 400px; }
+    #mainpage .front .catchphrase {
+      text-align: center;
+      margin: 25px 50px;
+      font-weight: bold;
+      font-size: 4em;
+      text-shadow: 0px 0px 5px black, -1px -1px black, 1px 1px black; }
+      @media (min-width: 400px) {
+        #mainpage .front .catchphrase {
+          font-size: 2.5em; } }
+      @media (min-width: 550px) {
+        #mainpage .front .catchphrase {
+          font-size: 3em; } }
+      @media (min-width: 750px) {
+        #mainpage .front .catchphrase {
+          font-size: 4em; } }
+  #mainpage .choice:hover {
+    border-bottom: 4px solid black; }
+  #mainpage .subheader {
+    font-family: 'Oswald';
+    background-color: #36D7B7;
+    box-sizing: border-box;
+    color: black;
+    font-size: 1.8em;
+    font-weight: bold;
+    height: auto;
+    min-height: 100px;
+    padding: 20px;
+    text-align: center;
+    width: 100%; }
+    #mainpage .subheader a {
+      color: black;
+      border-bottom: 5px solid #36D7B7;
+      text-decoration: none; }
+    #mainpage .subheader a:hover {
+      border-bottom: 5px solid black; }
+    #mainpage .subheader em {
+      font-style: italic; }
+    #mainpage .subheader img {
+      margin: 0 auto;
+      display: block;
+      height: 60px; }
+
+.divider {
+  clear: both;
+  height: 1px;
+  width: 100%;
+  border-bottom: 5px solid black;
+  display: inline-block; }
+
+row p {
+  padding: 5px; }
+
+p {
+  padding: 5px; }
+
+.column, .columns {
+  height: 100%; }
+  .column img, .columns img {
+    margin: 0 auto; }
+
+.emoji-middle {
   margin: 0 auto; }
 
-.mainlinks {
-  text-align: center;
-  margin-top: 10px; }
-
-.mainlinks a {
-  color: black;
-  font-family: 'Lato';
-  font-size: 2.75em;
-  margin: 0 auto;
-  padding: 20px;
-  text-align: center;
-  text-decoration: underline;
-  text-shadow: 2px 2px 0px white; }
-
-.mainpagelink:hover {
-  color: white;
-  text-shadow: 2px 2px 0px black; }
-
-#titlewrap {
-  margin: 10px auto;
-  width: 905px;
-  padding: 10px 0px;
-  border-top: 7px solid black;
-  border-bottom: 7px solid black;
-  font-family: 'Lato';
-  text-align: center; }
-
-#maintitle {
-  text-shadow: 4px 4px 1px white;
-  font-size: 5em; }
-
-#submaintitle {
-  font-size: 1.5em;
-  font-style: italic; }
-
-.creatorname {
-  position: absolute;
-  bottom: 10px;
-  text-align: center;
-  width: 100%;
-  font-size: .9em;
-  font-style: italic; }
-  .creatorname a {
-    text-decoration: underline;
-    color: black;
-    font-shadow: none; }
+.backgroundmoji {
+  background-image: url("../img/manyemojis.jpg");
+  height: 300px;
+  width: 300px; }
 
 /*# sourceMappingURL=main.css.map */
