--- a/sass/main.scss
+++ b/sass/main.scss
@@ -13,4 +13,5 @@ body, html {
 @import 'landing';
 @import 'creator';
 @import 'comicdisplay';
-@import 'indexpage';
+// @import 'indexpage';
+@import 'index';
