--- a/views/index.ejs
+++ b/views/index.ejs
@@ -49,13 +49,13 @@ vision lol
       </div>
       <div class="row">
         <div class="choice offset-by-two two columns">
+          VISION
+        </div>
+        <div class="choice two columns">
           PRODUCTS
         </div>
         <div class="choice two columns">
-          OUR VISION
-        </div>
-        <div class="choice two columns">
-          OUR TEAM
+          TEAM
         </div>
         <div class="choice two columns">
           CONTACT
@@ -66,28 +66,25 @@ vision lol
       </div>
 
       <div class="row">
-        <!-- <div class="f columns offset-by-one"> -->
-          <!-- <img class="u-max-full-width" src="img/frontsign.jpg"> -->
-        <!-- </div> -->
         <div class="ten front columns offset-by-one">
           <div class="catchphrase">
-          Dedicated To The Advancement Of Emoji Research Worldwide
+
         </div>
         </div>
         <div class="one column"></div>
 
       </div>
 
-     <div class="row">
-        <div class="offset-by-one ten columns">
+     <!-- <div class="row"> -->
+        <!-- <div class="offset-by-four four columns"> -->
         <div class="headline">
           <img src='emojis/475.png'>
           <span>Our Vision</span>
           <img class='flipped' src='emojis/475.png'>
         </div>
 
-        </div>
-      </div>
+        <!-- </div> -->
+      <!-- </div> -->
 
       <div class="row">
           <div class="five columns offset-by-one description">
