--- a/public/css/main.css
+++ b/public/css/main.css
@@ -476,10 +476,64 @@ input[type="radio"]:checked + label {
   text-decoration: underline;
   color: black; }
 
+.carousel-container {
+  width: 910px;
+  height: 310px;
+  margin: 0 auto; }
+
+.mainlinks {
+  text-align: center;
+  margin-top: 10px; }
+
+.mainlinks a {
+  color: black;
+  font-family: 'Lato';
+  font-size: 2.75em;
+  margin: 0 auto;
+  padding: 20px;
+  text-align: center;
+  text-decoration: underline;
+  text-shadow: 2px 2px 0px white; }
+
+.mainpagelink:hover {
+  color: white;
+  text-shadow: 2px 2px 0px black; }
+
+#titlewrap {
+  margin: 10px auto;
+  width: 905px;
+  padding: 10px 0px;
+  border-top: 7px solid black;
+  border-bottom: 7px solid black;
+  font-family: 'Lato';
+  text-align: center; }
+
+#maintitle {
+  text-shadow: 4px 4px 1px white;
+  font-size: 5em; }
+
+#submaintitle {
+  font-size: 1.5em;
+  font-style: italic; }
+
+.creatorname {
+  position: absolute;
+  bottom: 10px;
+  text-align: center;
+  width: 100%;
+  font-size: .9em;
+  font-style: italic; }
+  .creatorname a {
+    text-decoration: underline;
+    color: black;
+    font-shadow: none; }
+
 #mainpage {
   margin: 0 auto;
   padding: 0;
   font-family: 'Lato'; }
+  #mainpage p {
+    font-size: 1.2em; }
   #mainpage .container {
     background-color: white;
     border: 2px solid black; }
@@ -502,15 +556,16 @@ input[type="radio"]:checked + label {
   #mainpage #logo {
     margin-top: 30px; }
   #mainpage .headline {
-    font-family: 'Oswald';
-    height: 80px;
-    text-align: center;
-    line-height: 80px;
-    width: 100%;
-    margin: 10px auto;
+    text-transform: uppercase;
+    background-color: white;
     color: black;
-    background-color: #A2DED0;
-    font-size: 2.5em; }
+    width: auto;
+    font-family: 'Oswald';
+    font-size: 2.5em;
+    height: 80px;
+    line-height: 80px;
+    margin: 10px auto;
+    text-align: center; }
     #mainpage .headline img {
       height: auto;
       vertical-align: middle;
@@ -536,6 +591,8 @@ input[type="radio"]:checked + label {
     height: 300px;
     background-color: pink; }
   #mainpage .choice {
+    font-weight: bold;
+    font-size: 1.2em;
     text-align: center;
     line-height: 40px;
     border-bottom: 4px solid white; }
@@ -585,11 +642,12 @@ input[type="radio"]:checked + label {
     width: 80%;
     padding: 10%; }
   #mainpage .front {
-    background-image: url("../img/fronter2.jpg");
+    background-image: url("../img/fronter.jpg");
     background-position: center;
     background-size: auto;
     color: white;
-    height: 400px; }
+    height: 400px;
+    position: relative; }
     #mainpage .front .catchphrase {
       text-align: center;
       margin: 25px 50px;
